--- a/src/client/components/Tetris.css
+++ b/src/client/components/Tetris.css
@@ -4,7 +4,7 @@ html, body {
 	margin: 0;
 }
 #root {
-	background-color: #99D8CF;
+	background-color: #b4c6d5;
 	min-height: 100%;
 	min-width: 100%;
 	display: flex;
@@ -36,9 +36,69 @@ html, body {
 	background-color: #1cb3c8;
 }
 /* Lobby */
-.lobby-container form {
+.lobby-container {
+	align-items: center;
+	background-color: white;
+	border-radius: 4px;
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	max-width: 800px;
+	min-height: 500px;
+	width: 50%;
+}
+.username-input-container,
+.room-selection-container {
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.input-label {
+	color: #5195FE;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 22px;
+	margin: 20px 0;
+	text-transform: uppercase;
+}
+input {
+	border-radius: 5px;
+	border: solid 3px #5195FE;
+	cursor: pointer;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 14px;
+	outline: none;
+	padding: 10px;
+	width: calc(100% - 20px);
+}
+button {
+	background-color: #5195FE;
+	border-radius: 26px;
+	border: none;
+	color: white;
+	cursor: pointer;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 18px;
+	font-weight: 600;
+	margin-top: 23px;
+	padding: 15px 25px;
+	text-transform: uppercase;
+}
+button:disabled {
+	opacity: 0.7;
+}
+select {
+	-moz-appearance: none;
+	-webkit-appearance: none;
+	appearance: none;
+	border-radius: 5px;
+	border: solid 3px #5195FE;
+	cursor: pointer;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16px;
+	outline: none;
+	padding: 10px 20px;
 }
 
 /* Game */
