--- a/src/client/components/Tetris.css
+++ b/src/client/components/Tetris.css
@@ -147,17 +147,64 @@ button:hover:enabled {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	justify-content: space-between;
 	height: 800px;
 	width: 400px;
 }
+.score-container {
+	width: 320px;
+}
+.player-base-info {
+	align-items: center;
+	background-color: #fa4659;
+	border-radius: 5px;
+	display: flex;
+	justify-content: center;
+	overflow-x: auto;
+	padding: 15px;
+}
+.player-base-info-label {
+	color: white;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 18px;
+	font-weight: 600;
+}
+.player-base-info .player-base-info-label:nth-of-type(2) {
+	margin: 0 5px;
+}
+.score-display {
+	align-items: center;
+	background-color: white;
+	border-radius: 5px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	margin: 40px 0;
+	padding: 15px;
+}
+.score-label {
+	color: #fa4659;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 18px;
+	font-weight: 600;
+}
+.score-display .score-label:last-of-type {
+	font-size: 33px;
+}
+.spectrums-container {
+	display: flex;
+	flex-wrap: wrap;
+	height: 100%;
+	width: 320px;
+}
 .spectrum-container {
 	background-color: white;
-	width: 50%;
-	height: 50%;
+	flex-wrap: wrap;
+	height: 160px;
+	margin: 10px 13px;
+	width: 80px;
+    display: flex;
 }
-.score-container {
-	background-color: white;
-	width: 80%;
-	height: 40%;
+.spectrum-container .block{
+	height: 8px;
+	width: 8px;
 }
