--- a/src/client/components/Tetris.css
+++ b/src/client/components/Tetris.css
@@ -224,15 +224,19 @@ button:hover:enabled {
 	justify-content: center;
 	align-items: center;
 	height: 100%;
+	flex-direction: column;
 	position: absolute;
 	width: 100%;
 }
 .board-waiting-message {
 	color: #eb4d4b;
 	font-family: 'Open Sans', sans-serif;
-	font-size: 20px;
-	letter-spacing: 1px;
+	font-size: 21px;
+	letter-spacing: 1.5px;
 	font-weight: 600;
+}
+.board-waiting-message.owner-message {
+	margin-bottom: 30px;
 }
 
 /* Score */
