--- a/src/client/containers/Tetris.css
+++ b/src/client/containers/Tetris.css
@@ -125,7 +125,7 @@ html, body {
 	font-size: 20px;
 	font-weight: 600;
 	letter-spacing: 1px;
-	padding: 10px 0;
+	padding: 10px;
 	width: 33.33%;
 	background: none;
     border: none;
