--- a/src/client/containers/Tetris.css
+++ b/src/client/containers/Tetris.css
@@ -184,7 +184,7 @@ html, body {
 }
 .room-list-container,
 .room-creation-container,
-.room-info-container {
+.player-list-container {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
@@ -252,7 +252,7 @@ html, body {
 }
 .room-list-title,
 .room-creation-title,
-.room-info-title {
+.player-list-title {
 	color: #eb4d4b;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 30px;
@@ -266,13 +266,24 @@ html, body {
 }
 .player-item {
 	background-color: #454545;
-	border-radius: 5px;
+	border-top: solid 0.5px #383838;
+	border-bottom: solid 0.5px #383838;
 	color: #EFF1F3;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	padding: 12px 20px;
-	margin: 10px 0;
-	width: max-content;
+}
+.player-list .player-item:first-of-type {
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-top: none;
+	box-shadow: 0 3px 5px rgba(0,0,0,0.22);
+	margin-top: 10px;
+}
+.player-list .player-item:last-of-type {
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+	border-bottom: none;
 	box-shadow: 0 3px 5px rgba(0,0,0,0.22);
 }
 input {
