--- a/src/client/containers/Tetris.css
+++ b/src/client/containers/Tetris.css
@@ -139,14 +139,16 @@ html, body {
 	max-width: 1200px;
 }
 .username-input-form {
-	padding: 40px 40px 57px;
-	display: flex;
-    flex-direction: column;
 	align-items: center;
 	background-color: #454545;
 	border-radius: 5px;
-	margin: 50px 80px 80px;
 	box-shadow: 0 3px 5px rgba(0,0,0,0.22);
+	display: flex;
+	margin: 50px 80px 80px;
+	min-height: 185px;
+	justify-content: space-between;
+	padding: 40px 40px 57px;
+    flex-direction: column;
 }
 .input-error-message {
 	background-color: #f5a5a4;
@@ -155,8 +157,7 @@ html, body {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	font-weight: 500;
-	height: 27px;
-	margin-bottom: 20px;
+	height: 28px;
 	padding: 10px 15px;
 	text-align: center;
 	transition: opacity 0.3s;
@@ -295,7 +296,6 @@ input {
 	font-family: 'Open Sans', sans-serif;
 	font-size: 20px;
 	font-weight: 600;
-	margin: 0 0 40px;
 	outline: none;
 	padding: 10px 15px;
 	transition: border 0.3s;
